fix book position on mobile playbook download shape

--- a/src/ui/components/ShapePlaybook/stylesheet.css
+++ b/src/ui/components/ShapePlaybook/stylesheet.css
@@ -60,7 +60,7 @@
 
 @media (max-width: 887px) {
   :scope {
-    margin: calc(60rem - 15%) 0 0 0;
+    margin: calc(40rem - 15%) 0 0 0;
   }
 
   .content {
@@ -70,7 +70,7 @@
   .img-wrapper {
     grid-column: 2/-2;
     order: 1;
-    margin: -60rem 0 5rem 0;
+    margin: -40rem 0 5rem 0;
   }
 
   .container {
